Fix: [AEA-0000] - log correlation id (#76)
## Summary

- Routine Change

### Details

- change java version to corretto-21.0.2.14.1 (AWS java)
- compile for java 21 runtime
- add license checker
- log a correlation id