@@ -1,6 +1,7 @@
 package software.nhs.fhirvalidator.controller;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -97,7 +98,7 @@ public class ValidateController {
             return new ArrayList<>();
         }
 
-        if (inputResource instanceof Bundle && ((Bundle) inputResource).getType() == Bundle.BundleType.SEARCHSET) {
+        if (inputResource instanceof Bundle _inputResource && (_inputResource.getType() == Bundle.BundleType.SEARCHSET)) {
             List<IBaseResource> bundleResources = new ArrayList<>();
             for (Bundle.BundleEntryComponent entry : ((Bundle) inputResource).getEntry()) {
                 if (entry.getResource().fhirType().equals("Bundle")) {
@@ -111,6 +112,6 @@ public class ValidateController {
             }
         }
 
-        return List.of(inputResource);
+        return Arrays.asList(inputResource);
     }
 }
