@@ -31,11 +31,11 @@ public class MessageDefinitionApplier {
                         throw new RuntimeException("error in MessageDefinitionApplier", ex);
                     }
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public OperationOutcome applyMessageDefinition(IBaseResource resource) {
-        if (!(resource instanceof Bundle) || ((Bundle) resource).getType() != Bundle.BundleType.MESSAGE) {
+        if (!(resource instanceof Bundle _resource) || (_resource.getType() != Bundle.BundleType.MESSAGE)) {
             return null;
         }
 
